# Experiment-BioTechML-Workshop

./: README.md  notebook_1.ipynb  notebook_tabular_data.ipynb  pyproject.toml
data/raw/: biotech_preprocessing_raw.csv
src/notebooks/: image_train.ipynb  image_train_old.ipynb  prediction_tabular_data_demo.ipynb  train_tabular_data.ipynb
