[project]
name = "notebooks"
version = "0.1.0"
description = "Notebook-first Python-Setup"
requires-python = ">=3.12"

dependencies = [
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "jupyterlab>=4.2",
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.7.2",
  "matplotlib>=3.9",          # Formatter, used by VS Code-Plugin
  "black>=24.8",
  "seaborn>=0.13.2",
  "medmnist>=3.0.2",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# Optional, lint-/format-settings (notebook cells are affected, too)
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-select = ["I"]   # isort
